--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI & Data Science Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
     <style>
@@ -1492,12 +1493,15 @@ My academic journey is highlighted by hands-on projects, including AI chatbots, 
         <div class="contact-info">
             <p>I'm currently available for research collaborations or AI development positions. If you have an interesting problem to solve with AI or just want to discuss the latest in machine learning, feel free to reach out.</p>
         </div>
-        <a href="mailto:ai.developer@example.com" class="btn">Email Me</a>
+        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=arokiyanithishj@gmail.com" class="btn">Email Me</a>
         <div class="contact-links">
+            <a href="tel:+919876543210" class="contact-link"><i class="fas fa-phone"></i></a>
             <a href="https://www.linkedin.com/in/arokiya-nithishj/" class="contact-link"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#" class="contact-link"><i class="fab fa-github"></i></a>
-            <a href="#" class="contact-link"><i class="fab fa-kaggle"></i></a>
+            <a href="https://github.com/ArokiyaNithish" class="contact-link"><i class="fab fa-github"></i></a>
+            <a href="https://www.kaggle.com/arokiyanithishj" class="contact-link"><i class="fab fa-kaggle"></i></a>
             <a href="#" class="contact-link"><i class="fab fa-google-scholar"></i></a>
+            
+            
         </div>
     </section>
 
