--- a/index.html
+++ b/index.html
@@ -1941,7 +1941,7 @@ My academic journey is highlighted by hands-on projects, including AI chatbots, 
                 <p>Developed automated reporting systems that reduced manual data entry by 80%. Created complex Excel macros for financial modeling and VBA scripts to streamline document generation. These skills were instrumental in automating administrative processes for several student organizations.</p>
             </div>
             
-            <img src="bss.jpg" alt="Mendix Rapid Developer Certificate" style="width: 800px; height: 900px; border: 1px solid #ccc;">
+            <img src="bss.jpg" alt="Mendix Rapid Developer Certificate" style="max-width: 100%; height: auto; border: 1px solid #ccc;">
 
         </div>
     </div>
