--- a/index.html
+++ b/index.html
@@ -1579,58 +1579,117 @@ My academic journey is highlighted by hands-on projects, including AI chatbots, 
     <!-- Certifications -->
     <section class="section" id="certifications">
         <div class="section-title">
-            <h2>Certifications & Achievements</h2>
+            <h2>Certifications <!--& Achievements --></h2>
         </div>
+
+
+        <h2 style="text-align: center;">Technical Completion Certification</h2>
+        <div class="certs-grid">
+            <!-- Cert 1 -->
+            <div class="cert-card glow-on-hover" onclick="openModal('cert5')">
+                <h3>Paper Presentation on "AI-Powered Intelligent Traffic Systems", Panimalar Engineering College</h3>
+                <p>This certificate acknowledges my active participation in Madasa'25, the annual technical symposium organized by the Department of Computer Science and Business Systems at Panimalar Engineering College, Chennai, held on 22nd February 2025. </p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
+            </div>
+
+            <div class="cert-card glow-on-hover" onclick="openModal('cert6')">
+                <h3>Project Presentation on "Advanced Automatic Vehicle Parking System" at ISTE Tamil Nadu Section Convention, P.S.R. Engineering College</h3>
+                <p>This certificate recognizes my active participation in the 22nd Annual ISTE Tamilnadu Section Engineering Students' Convention, held on 3rd May 2024 at P.S.R. Engineering College, Sivakasi.</p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
+            </div>
+
+            <div class="cert-card glow-on-hover" onclick="openModal('cert6')">
+                <h3>Participation in ILIZIAM'25 – National Level Technical Symposium</h3>
+                <p>This certificate acknowledges my active participation in ILIZIAM'25, a Two-Day National Level Technical Symposium organized by the Department of Information Technology, School of Computing at Vel Tech University, Chennai, held on 24th–25th February 2025. </p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
+            </div>
+
+            <div class="cert-card glow-on-hover" onclick="openModal('cert6')">
+                <h3>National Level Technical Quiz at WISSENAIRE'3.0</h3>
+                <p>This Certificate of Appreciation recognizes my outstanding participation in the Quiz Contest during WISSENAIRE'3.0, a National Level Technical Symposium organized by SIMATS Engineering on 27th August 2024.</p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
+            </div>
+
+            <div class="cert-card glow-on-hover" onclick="openModal('cert6')">
+                <h3>National Pollution Control Day Quiz</h3>
+                <p>Participated in the "Nature Crisis" Quiz on December 2, 2024, organized by the Institution’s Innovation Council (IIC 7.0) at Vel Tech.The quiz was held in observance of National Pollution Control Day.</p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
+            </div>
+
+            <div class="cert-card glow-on-hover" onclick="openModal('cert6')">
+                <h3>E-Quiz on Indian Traditional Sports</h3>
+                <p>This certificate recognizes my outstanding participation in the E-Quiz on "Indian Traditional Sports", organized by the Department of Library & Information Center in association with IQAC.</p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
+            </div>
+        </div> <br>
+
+        <h2 style="text-align: center;">Courses Certification</h2>
+
         <div class="certs-grid">
             <!-- Cert 1 -->
             <div class="cert-card glow-on-hover" onclick="openModal('cert1')">
                 <h3>Infosys Springboard: Java Programming Fundamentals Certificate Course</h3>
-                <p>Demonstrates proficiency in building and training models using TensorFlow for computer vision, NLP, and time series.</p>
-                <div class="cert-marker">View Certificate <i class="fas fa-external-link-alt"></i></div>
+                <p>This certificate verifies my successful completion of the Java Programming Fundamentals course, offered by Infosys Springboard, on April 14, 2025.</p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
             </div>
             
             <!-- Cert 2 -->
             <div class="cert-card glow-on-hover" onclick="openModal('cert2')">
                 <h3>CompTIA IT Fundamentals: Operating Systems – Certificate Course Provided by Infosys</h3>
-                <p>Validates ability to build, train, tune, and deploy machine learning models on AWS.</p>
-                <div class="cert-marker">View Certificate <i class="fas fa-external-link-alt"></i></div>
+                <p>This certificate confirms my successful completion of the CompTIA IT Fundamentals: Operating Systems course, offered by Infosys Springboard, on April 24, 2025.</p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div><br>
             </div>
-            
-            <!-- Cert 3 -->
+
             <div class="cert-card glow-on-hover" onclick="openModal('cert3')">
                 <h3>"Mendix Rapid Developer" Certification Awarded by Mendix (Low-Code Application Development Platform)</h3>
-                <p>Mastery of neural networks, CNNs, RNNs, LSTM, Adam, Dropout, BatchNorm, and more.</p>
-                <div class="cert-marker">View Certificate <i class="fas fa-external-link-alt"></i></div>
-            </div>
-
-            <div class="cert-card glow-on-hover" onclick="openModal('cert4')">
-                <h3>"Full Stack Development" Webinar Organized by Innovate Technologies</h3>
-                <p>Mastery of neural networks, CNNs, RNNs, LSTM, Adam, Dropout, BatchNorm, and more.</p>
-                <div class="cert-marker">View Certificate <i class="fas fa-external-link-alt"></i></div>
-            </div>
-
-            <div class="cert-card glow-on-hover" onclick="openModal('cert5')">
-                <h3>Paper Presentation on "AI-Powered Intelligent Traffic Systems", Panimalar Engineering College</h3>
-                <p>Mastery of neural networks, CNNs, RNNs, LSTM, Adam, Dropout, BatchNorm, and more.</p>
-                <div class="cert-marker">View Certificate <i class="fas fa-external-link-alt"></i></div>
-            </div>
-
-            <div class="cert-card glow-on-hover" onclick="openModal('cert6')">
-                <h3>Project Presentation on "Advanced Automatic Vehicle Parking System" at ISTE Tamil Nadu Section Convention, P.S.R. Engineering College</h3>
-                <p>Mastery of neural networks, CNNs, RNNs, LSTM, Adam, Dropout, BatchNorm, and more.</p>
-                <div class="cert-marker">View Certificate <i class="fas fa-external-link-alt"></i></div>
-            </div>
-
-            <div class="cert-card glow-on-hover" onclick="openModal('cert7')">
-                <h3>"Became a Successful Leader" – Leadership Workshop, Vel Tech University</h3>
-                <p>Mastery of neural networks, CNNs, RNNs, LSTM, Adam, Dropout, BatchNorm, and more.</p>
-                <div class="cert-marker">View Certificate <i class="fas fa-external-link-alt"></i></div>
+                <p>This certificate officially recognizes my achievement in earning the Mendix Rapid Developer Certification on October 13, 2024.</p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
             </div>
 
             <div class="cert-card glow-on-hover" onclick="openModal('cert8')">
                 <h3>Diploma in Office Automation Awarded by Bharat Sevak Samaj</h3>
-                <p>Mastery of neural networks, CNNs, RNNs, LSTM, Adam, Dropout, BatchNorm, and more.</p>
-                <div class="cert-marker">View Certificate <i class="fas fa-external-link-alt"></i></div>
+                <p>This certificate confirms my successful completion of the Diploma in Office Automation program, conducted by Genetic Computer Centre under the BSS.</p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
+            </div>
+        </div> <br>
+
+        <h2 style="text-align: center;">Workshop Certification</h2>
+        <div class="certs-grid">
+
+            <div class="cert-card glow-on-hover" onclick="openModal('cert7')">
+                <h3>"AWS Cloud Services" Workshop</h3>
+                <p>This certificate acknowledges participation in the "AWS Cloud Services" workshop, held on 27th–28th February 2025, organized by the Department of AI and Data Science, Vel Tech.</p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
+            </div>
+
+            <div class="cert-card glow-on-hover" onclick="openModal('cert7')">
+                <h3>"Hands-On Guide to DBMS" Workshop</h3>
+                <p>This certificate acknowledges participation in the "From Tables to Trends: Hands-On Guide to DBMS" workshop, held on February 27th-28th, 2025, organized by the Department of AI and Data Science at Vel Tech.</p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
+            </div>
+
+            <div class="cert-card glow-on-hover" onclick="openModal('cert7')">
+                <h3>Career Guidance Seminar – "Prepare Yourself Before an Interview"</h3>
+                <p>Attended a career guidance seminar titled 'Prepare Yourself Before an Interview' organized by the Department of AI & DS, Vel Tech, on 21st Feb 2025.</p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
+            </div>
+
+            <div class="cert-card glow-on-hover" onclick="openModal('cert7')">
+                <h3>"Code Your Dreams in Java" – Hands-on Workshop Participation</h3>
+                <p>Participated in a one-day Java workshoporganized by the Department of AI & DS, Vel Tech, on 22nd Jan 2025, gaining hands-on experience in core Java and OOP concepts.</p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
+            </div>
+
+            <div class="cert-card glow-on-hover" onclick="openModal('cert4')">
+                <h3>"Full Stack Development" Webinar Organized by Innovate Technologies</h3>
+                <p>This certificate verifies my successful participation in a One-Day Intensive Workshop on Full Stack Development, conducted by Innovate Technologies on 1st February 2025. </p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
+            </div>
+
+            <div class="cert-card glow-on-hover" onclick="openModal('cert7')">
+                <h3>"Became a Successful Leader" – Leadership Workshop</h3>
+                <p>Certificate awarded for active participation in the "7 Habits of Successful Leaders" workshop, held on 15th–16th July 2024, organized by the Department of Computer Science and Engineering at Vel Tech. </p>
+                <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
             </div>
         </div>
     </section>
