--- a/index.html
+++ b/index.html
@@ -1662,7 +1662,7 @@ My academic journey is highlighted by hands-on projects, including AI chatbots, 
                 <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
             </div>
 
-            <div class="cert-card glow-on-hover" onclick="openModal('cert7')">
+            <div class="cert-card glow-on-hover" onclick="openModal('cert12')">
                 <h3>"Hands-On Guide to DBMS" Workshop</h3>
                 <p>Participated in the 'Hands-On Guide to DBMS' workshop on February 27th-28th, 2025, organized by the Depart of AI & DS, Vel Tech.</p>
                 <div class="cert-marker">View Details <i class="fas fa-external-link-alt"></i></div>
@@ -2026,6 +2026,30 @@ My academic journey is highlighted by hands-on projects, including AI chatbots, 
                         <li>Gained hands-on experience through guided lab sessions.</li>
                         <li>Explored real-world applications of AWS in various industries.</li>
                         <li>Improved skills in cloud security, storage, and access control.</li>
+                        </ul>
+                </p>
+            </div>
+            
+            <img src="bss.jpg" alt="Mendix Rapid Developer Certificate" style="max-width: 100%; height: auto; border: 1px solid #ccc;">
+
+        </div>
+    </div>
+
+    <div id="cert12" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal('cert12')">&times;</span>
+            <h2 class="modal-title">Diploma in Office Automation Awarded by Bharat Sevak Samaj</h2>
+            <p style="text-align: justify;" class="modal-description">I actively participated in a two-day workshop titled "From Tables to Trends: Hands-On Guide to DBMS" held on February 27th and 28th, 2025, at Vel Tech Rangarajan Dr. Sagunthala R&D Institute of Science and Technology, Chennai. The event was organized by the Department of Artificial Intelligence and Data Science, aiming to bridge the gap between core database principles and modern data-driven applications.The workshop was guided by experienced faculty and supported by industry-relevant examples, providing a comprehensive introduction to Database Management Systems (DBMS) and evolving trends in data storage, handling, and analytics. It was officially certified by Ms. Jayashree S (Event Coordinator) and Prof. Dr. S.R. Chokkalingam (Dean, School of Computing).</p>
+            
+            <div class="project-details">
+                <h3>My Learning Experience and Skills Gained</h3> <br>
+                <p>
+                    <ul>
+                        <li>Mastered essential DBMS concepts including relational models, normalization, and schema design.</li>
+                        <li>Gained hands-on experience with SQL queries, joins, indexing, and transaction management.</li>
+                        <li>Explored real-time industry use cases of DBMS in sectors like banking, healthcare, and e-commerce.</li>
+                        <li>Learned about the shift from traditional RDBMS to modern solutions like NoSQL and cloud databases</li>
+                        <li>Developed skills in data optimization, query performance tuning, and relational data design.</li>
                         </ul>
                 </p>
             </div>
